Fix IPv6 overflow on current activity cards

--- a/data/interfaces/default/css/plexpy.css
+++ b/data/interfaces/default/css/plexpy.css
@@ -853,6 +853,15 @@ a .users-poster-face:hover {
     -webkit-flex-grow: 1;
     flex-grow: 1;
 }
+.dashboard-activity-info-item .sub-value .ip-container {
+    display: inline-flex;
+}
+.dashboard-activity-info-item .sub-value .ip-address {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 140px;
+}
 .dashboard-activity-info-time {
     position: absolute;
     top: 200px;
